--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"style-loader": "^1.2.1",
 		"terser-webpack-plugin": "^4.1.0",
+		"url-loader": "^4.1.0",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0"
