--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,35 +10,27 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  deploy:
     name: deploy
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
       - uses: actions/checkout@v2
-      - name: Set up environment
-        uses: actions/setup-node@v1.4.3
+      - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2.1.1
-        with:
-          path: node_modules
-          key: ${{runner.OS}}-build-${{hashFiles('**/package-lock.json')}}
-          restore-keys: |
-            ${{ runner.OS }}-build-${{ runner.OS }}-
-      - name: Install dependencies
-        run: npm install
-      - name: Build application
-        run: npm run build
+          node-version: '14'
+
+      - name: package install
+        run: |
+          npm install
+      - name: build webpack
+        run: |
+          npm run build
+          echo "kimchunsick.me" > build/CNAME
         env:
           NODE_ENV: production
+
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3.6.4
         with:
           PERSONAL_TOKEN: ${{secrets.GH_DEPLOY}}
-          PUBLISH_DIR: ./dist
+          PUBLISH_DIR: ./build
