--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       - name: build webpack
         run: |
           npm run build
-          echo "kimchunsick.me" > build/CNAME
+          echo "kimchunsick.me" > dist/CNAME
         env:
           NODE_ENV: production
 
@@ -33,4 +33,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.6.4
         with:
           PERSONAL_TOKEN: ${{secrets.GH_DEPLOY}}
-          PUBLISH_DIR: ./build
+          PUBLISH_DIR: ./dist
